; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/carl9170/extr_main.c_carl9170_cancel_worker.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/carl9170/extr_main.c_carl9170_cancel_worker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar9170 = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ar9170*)* @carl9170_cancel_worker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @carl9170_cancel_worker(%struct.ar9170* %0) #0 {
  %2 = alloca %struct.ar9170*, align 8
  store %struct.ar9170* %0, %struct.ar9170** %2, align 8
  %3 = load %struct.ar9170*, %struct.ar9170** %2, align 8
  %4 = getelementptr inbounds %struct.ar9170, %struct.ar9170* %3, i32 0, i32 5
  %5 = call i32 @cancel_delayed_work_sync(i32* %4)
  %6 = load %struct.ar9170*, %struct.ar9170** %2, align 8
  %7 = getelementptr inbounds %struct.ar9170, %struct.ar9170* %6, i32 0, i32 4
  %8 = call i32 @cancel_delayed_work_sync(i32* %7)
  %9 = load %struct.ar9170*, %struct.ar9170** %2, align 8
  %10 = getelementptr inbounds %struct.ar9170, %struct.ar9170* %9, i32 0, i32 2
  %11 = call i32 @cancel_work_sync(i32* %10)
  %12 = load %struct.ar9170*, %struct.ar9170** %2, align 8
  %13 = getelementptr inbounds %struct.ar9170, %struct.ar9170* %12, i32 0, i32 1
  %14 = call i32 @cancel_work_sync(i32* %13)
  %15 = load %struct.ar9170*, %struct.ar9170** %2, align 8
  %16 = getelementptr inbounds %struct.ar9170, %struct.ar9170* %15, i32 0, i32 0
  %17 = call i32 @cancel_work_sync(i32* %16)
  ret void
}

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @cancel_work_sync(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
